# osint_double

./: .env.example  .gitignore  CLAUDE.md  EXECUTIVE_PRIMER.md  README.md  WORLDMONITOR_INTEGRATION.md  alembic.ini  docker-compose.yml  init.sql  main.py  pyproject.toml  requirements.txt  session_2026-03-15_uat_bugfixes.md  setup_playwright.py  structure.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: CONVENTIONS.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
examples/: run_extended_investigation.py
migrations/: env.py
migrations/versions/: 35dce51cf74b_add_investigations_table.py  c753fe39a0fb_initial_schema.py  ccb8392f3316_vector_1024_to_768.py
osint_system/: __init__.py  runner.py  serve.py
osint_system/agents/: __init__.py  base_agent.py  planning_agent.py  registry.py  simple_agent.py
osint_system/analysis/: __init__.py  contradiction_analyzer.py  data_aggregator.py  pattern_detector.py  schemas.py  synthesizer.py
osint_system/api/: __init__.py  app.py  dependencies.py  errors.py  schemas.py
osint_system/cli/: main.py
osint_system/config/: __init__.py  analysis_config.py  database_config.py  feed_config.py  graph_config.py  logging.py  news_sources.py  settings.py  source_credibility.py
osint_system/dashboard/: __init__.py  app.py
osint_system/data_management/: __init__.py  article_store.py  classification_store.py  database.py  (+3 more)
scripts/: migrate_json_to_postgres.py
tests/: test_integration.py  test_integration_simple.py
(+363 files in other folders)
